# LoSIE

./: .gitignore  Cargo.toml  run_autotrain_docker.sh
.github/workflows/: build-and-deploy.yml  build-autotrain-docker.yml  build-autotrain-singularity.yml  build-deploy-queue-training.yml
annotator/: pyproject.toml  storage.py
annotator/pages/: 1_Upload.py  2_View_Modify.py
autotrain/: Dockerfile  autotrain.def  llm_sft_qwen3_5-800M.def  llm_sft_qwen3_5-800M.yaml  main.py  pyproject.toml  seq_2_seq_config.yaml  seq_2_seq_full_target.def  seq_2_seq_full_target.yaml  seq_2_seq_phi_4_mini.def  seq_2_seq_phi_4_mini.yaml
data-annotator/: annotator_utils.py  app.py  main.py  pyproject.toml  session_helper.py
data-annotator/pages/: 1_Upload.py  2_View_Modify.py
data-gen/: Cargo.toml
data-gen/src/: gentar.rs  lib.rs  main.rs  synlog.rs  token_bucket.rs
evaluation/: pyproject.toml
evaluation/src/evaluation/: cli.py  metrics.py  parsing.py
losie-inference/: README.md  pyproject.toml
losie-inference/src/losie_inference/: __init__.py  cli.py
sbatch/: losie_run.sbatch.template
scripts/: convert_hf_to_gguf.py  download_data.py  infer_vllm.py  inference_gguf.py  inference_hf.py  nltk_download.py  split_data.py  transform_to_chat_format.py  transform_to_key_generator_format.py
src/: cli_args.rs  gentar.rs  lib.rs  main.rs  output_dir.rs  parser.rs  synlog.rs  token_bucket.rs
unsloth/: llm_sft_phi_4_mini.def  llm_sft_phi_4_mini.yaml  llm_sft_qwen3_5-800M.def  llm_sft_qwen3_5-800M.yaml  test_train.py  train.py
