[package]
name = "ler-datagen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.31.1", features = ["chat-completion"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
futures = "0.3.31"
genai = "0.4.4"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
